MET-864 aws docs WIP
[ci skip]